--- a/src/css/_animations.styl
+++ b/src/css/_animations.styl
@@ -7,7 +7,7 @@
 
 .order-enter
   transform: translateX(-120%)
-  transition 0.5s
+  transition .5s
   max-height: 0
   padding 0 !important
   &.order-enter-active
@@ -16,7 +16,7 @@
     padding 2rem 0 !important
 
 .order-exit
-  transition 0.5s
+  transition .5s
   transform: translateX(0)
   &.order-exit-active
     transform: translateX(120%)
@@ -24,20 +24,20 @@
 
 
 .count-enter
-  background: red
+  /*background: red*/
   transition .5s
   transform translateY(100%)
   &.count-enter-active
-    background: yellow
+    /*background: yellow*/
     transform translateY(0)
 
 .count-exit
-  background: black
+  /*background: black*/
   transform translateY(0)
   transition .5s
   position absolute
   left 0
   bottom 0
   &.count-exit-active
-    background green
+    /*background green*/
     transform translateY(-100%) scale(3)
