--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,19 +24,19 @@
   padding: 0;
 }
 .count-enter {
-  background: #f00;
+/*background: red*/
   -webkit-transition: 0.5s;
   transition: 0.5s;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
 }
 .count-enter.count-enter-active {
-  background: #ff0;
+/*background: yellow*/
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
 .count-exit {
-  background: #000;
+/*background: black*/
   -webkit-transform: translateY(0);
           transform: translateY(0);
   -webkit-transition: 0.5s;
@@ -46,7 +46,7 @@
   bottom: 0;
 }
 .count-exit.count-exit-active {
-  background: #008000;
+/*background green*/
   -webkit-transform: translateY(-100%) scale(3);
           transform: translateY(-100%) scale(3);
 }
